fixed Terminal.h, README for 4 members

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-TEAM
+TEAM (Group of FOUR!!) (Gradescope only takes up to groups of three)
 	Ray Lee, jlee664
 	Mark Gonzales, mgonza60
 	Nick Jiang, njiang7
